fix dark mode colors in airport action buttons and cover image dropdown

--- a/app/assets/stylesheets/airports/show.scss
+++ b/app/assets/stylesheets/airports/show.scss
@@ -37,9 +37,10 @@
   }
 }
 
-.cover-image-dropdown {
-  .dropdown-menu li:hover {
-    cursor: pointer;
+@include color-mode(dark) {
+  .actions .btn {
+    border-color: $light;
+    color: $light;
   }
 }
 
